<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.RiverActivity">

    <Button
        android:id="@+id/proceedButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/stardos_stencil_bold"
        android:text="@string/proceed"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/foldButton2" />

    <Button
        android:id="@+id/foldButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccentRed"
        android:fontFamily="@font/stardos_stencil_bold"
        android:text="@string/fold"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/proceedButton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/riverTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/stardos_stencil_bold"
        android:text="@string/river_probabilities"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/foldButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riverTextView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView41"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:text="@string/hand"
                android:textColor="@color/colorAccentDark"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/royalFlushTextView2"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:text="@string/probability"
                android:textColor="@color/colorAccentDark"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView41" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:text="@string/royal_flush"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView41" />

            <TextView
                android:id="@+id/royalFlushTextView"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:maxLength="10"
                android:text="@string/error"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:text="@string/straight_flush"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/straightFlushTextView"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:maxLength="10"
                android:text="@string/error"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView29" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:text="@string/four_kind"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />

            <TextView
                android:id="@+id/fourKindTextView"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:maxLength="10"
                android:text="@string/error"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView23" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:text="@string/full_house"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <TextView
                android:id="@+id/fullHouseTextView"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:maxLength="10"
                android:text="@string/error"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView25" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:text="@string/flush"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <TextView
                android:id="@+id/FlushTextView"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:maxLength="10"
                android:text="@string/error"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView27" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:text="@string/straight"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

            <TextView
                android:id="@+id/straightTextView"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:maxLength="10"
                android:text="@string/error"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView31" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:text="@string/three_kind"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/threeKindTextview"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:maxLength="10"
                android:text="@string/error"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView33" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:text="@string/two_pair"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView33" />

            <TextView
                android:id="@+id/twoPairTextView"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:maxLength="10"
                android:text="@string/error"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView35" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:text="@string/one_pair"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView35" />

            <TextView
                android:id="@+id/onePairTextView"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:maxLength="10"
                android:text="@string/error"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView37" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:text="@string/higher_card"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView37" />

            <TextView
                android:id="@+id/higherCardTextView"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stardos_stencil_bold"
                android:maxLength="10"
                android:text="@string/error"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView39" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>